package org.apollo.events;

public abstract class EventProcessor {
  public abstract void processEvent(Event event);
}


