package org.apollo.handlers;

public class OutPutHandler {
  public void displayMessage(String message) {
    System.out.println(message);
}
}
